# SmartHome_WatchDog

./: .gitignore  CMakeLists.txt  README.md  create_app.sh
src/: camera.cpp  camera.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qrc_resources.cpp  resources.qrc  telegram.cpp  telegram.h  ui_mainwindow.h  yolo.cpp  yolo.hpp  yolo_engine.cpp  yolo_engine.hpp
